# fastapi_tesseract

./: README.md  demo.docx  main.py  model.py  new_document.docx  pyproject.toml  requirements.txt
files/word_output/: new_document.docx
